<> : 1047001 : Sonar Fix